fix categories alignment

--- a/src/client/containers/Marketview/sections/main/FormatCard/style.scss
+++ b/src/client/containers/Marketview/sections/main/FormatCard/style.scss
@@ -47,6 +47,11 @@
     }
     .formatItemText {
       margin-top: 20px;
+      height: 80px;
+      display: flex;
+      flex-direction: column;
+      justify-content: space-between;
+
       span {
         display: block;
         text-align: center;
